--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BongominErickJuma.github.io/foodstore",
+  "homepage": "https://BongominErickJuma.github.io/E-commerce-Store",
   "name": "product-cart-vite",
   "private": true,
   "version": "0.0.0",
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
+    "gh-pages": "^6.3.0",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
